# 3.5-rpi-display

./: CHEAT_SHEET.md  CMakeLists.txt  COMPILATION_FIXES.md  FINAL_COMPILATION_SUMMARY.md  LICENSE  Makefile  QUICK_START.md  README.md  UBUNTU_SERVER_24.04_INSTALL.md  install.sh
examples/: display_benchmark.c  display_test.c  performance_monitor.c  touch_test.c
include/: display_context.h  efficient_rpi_display.h  ili9486l_driver.h  modern_drm_interface.h  xpt2046_touch.h
overlays/: efficient-rpi35-overlay.dts
scripts/: calibrate-touch.sh  configure-display.sh  create_ubuntu_test_environment.sh  efficient_rpi_display.pc.in  enhanced_install.sh  install.sh  pi5_compatibility_check.sh  test_build_ubuntu_server.sh  ubuntu_server_24.04_compatibility.sh  validate_build.sh
src/: efficient_rpi_display.c  ili9486l_driver.c  modern_drm_interface.c  xpt2046_touch.c
